4179
Every example above is now rejected by the compiler:
```scala
Welcome to Scala version 2.10.0.r26093-b20111130020250 (OpenJDK 64-Bit Server VM, Java 1.7.0_147-icedtea).
```

First example:
```scala
<console>:10: error: type mismatch;
 found   : String("hello")
 required: _$1 where type +_$1
              f[A[Int]]("hello")
                        ^
```

Second example:
```scala
<console>:10: error: type mismatch;
 found   : String("Hello")
 required: b.T2
    (which expands to)  _$1
              b.m("Hello")
                  ^
```

Is this fixed?
